# immersive-ai-reader

./: .env.local.example  .eslintrc.json  .gitignore  .impeccable.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  MIGRATION.md  README.md  RUN_AND_TEST.md  clean.sh  docker-compose.yml  index.html  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
docs/: FOCUS_MODE_DESIGN.md  PRD.md  PRETEXT_INTEGRATION_DESIGN.md  ROADMAP_PROGRESS.md
research/vibero-immersive-reader/: 沉浸式AI阅读器_PRD.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: client.rs
src-tauri/src/commands/: ai.rs  ai_usage.rs  annotation.rs  conversation.rs  document.rs  focus.rs  library.rs  logs.rs  mod.rs  tag.rs
src-tauri/src/database/: connection.rs
src-tauri/src/database/migrations/: 001_initial.sql  002_add_last_page.sql  003_add_file_path_index.sql
src-tauri/src/database/repositories/: ai_usage_repo.rs  annotation_repo.rs  conversation_repo.rs  document_repo.rs  focus_repo.rs  library_repo.rs  mod.rs  tag_repo.rs
src-tauri/src/models/: ai_usage.rs  annotation.rs  conversation.rs  document.rs  focus.rs  library.rs  mod.rs  tag.rs
src-tauri/src/security/: keychain.rs
src/app/: globals.css  layout.tsx  page.tsx
src/constants/: aiProviders.ts  api.ts  colors.ts  limits.ts
src/hooks/: useAI.ts  useCanvasColors.ts  useCanvasRendering.ts  useFocusMode.tsx  useFocusTrap.ts  useKeyboardShortcuts.ts  usePDF.ts  usePDFThumbnails.ts  useSettings.ts
src/polyfills/: promiseWithResolvers.ts
src/styles/: globals.css
src/types/: annotation.ts  conversation.ts  document.ts  settings.ts
src/utils/: debounce.ts  dragPayload.ts  markdown.ts  markdownStream.ts  retry.ts
tests/: setup.ts
tests/integration/: upload-flow.test.ts
tests/unit/: annotations.test.ts  conversations.test.ts  documents.test.ts  (+3 more)
(+50 files in other folders)
